<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/booking_root_layer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff1b2836"
    tools:context="com.example.brainbell.yuptaskkomsic.BookingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/booking_poster_img"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/poster_img"
                android:background="#fff7da"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                tools:src="@drawable/the_avengers" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/booking_title_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    tools:text="@string/wonder_woman_title"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/booking_rating_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    tools:text="9.9"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/booking_director_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/booking_title_txt"
                    android:layout_marginTop="4dp"
                    tools:text="@string/wonder_woman_director"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#fff" />

                <TextView
                    android:id="@+id/booking_duration_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/booking_rating_txt"
                    android:layout_marginTop="4dp"
                    tools:text="123"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#fff" />

            </RelativeLayout>

            <TextView
                android:id="@+id/booking_plot_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:padding="16dp"
                tools:text="@string/iron_man_plot"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#fff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:onClick="onClickBookNow"
                android:text="@string/book_now"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#fff"/>

            <View
                android:layout_width="1dp"
                android:layout_height="1dp"/>

            <LinearLayout
                android:id="@+id/trailer_linear_layout"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:orientation="horizontal"
                android:onClick="onClickTrailerNow">

                <ImageView
                    android:paddingLeft="32dp"
                    android:paddingStart="32dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_music"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="0.24"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:onClick="onClickTrailerNow"
                    android:text="Trailer"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#fff"/>

                <ImageView
                    android:paddingRight="32dp"
                    android:paddingEnd="32dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_music"/>
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
</ScrollView>

