<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff1b2836"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/root_layer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="#fff"
            android:src="@drawable/movies_ticket" />

        <LinearLayout
            android:id="@+id/facebook_log_in_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/colorPrimary"
                android:scaleType="centerCrop"
                android:src="@drawable/fb_icon" />

            <TextView
                android:id="@+id/facebook_log_in_txt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ff4670bc"
                android:gravity="center"
                android:text="Login With facebook"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#fff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_weight="1"
                android:background="#fff"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:text="@string/or"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#fff" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_weight="1"
                android:background="#fff"
                android:gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="8dp"
                android:src="@drawable/ic_user_name" />

            <EditText
                android:id="@+id/username_edt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:hint="more than 3 characters"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:paddingStart="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="8dp"
                android:src="@drawable/ic_action_pass" />

            <EditText
                android:id="@+id/password_edt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:hint="more than 6 characters"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:password="true" />
        </LinearLayout>


        <TextView
            android:id="@+id/forgot_password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/log_in_txt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/log_in"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#fff"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_acct"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/sign_up_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/sign_up"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>

